# pacrat

./: .gitignore  AUTHORS.md  INSTALL.md  Makefile  Pacrat.cabal  README.md
doc/man/man1/: pacrat.1.ronn  portal.1.ronn
src/: Main.hs  Pacrat.hs
src/Pacrat/: CLI.hs  GUI.hs  Wrapper.hs
testsuite/: runtests.sh
testsuite/tests/Pacrat/: CLI.hs
util/: build.rb  check-dependencies.rb  check_dependencies.rb  generate-man.rb  generate_man.rb
