name:                pacrat
version:             0.0.1
synopsis:            A wrapper around the Pacman package manager and the AUR.
description:
  A friendly, powerful wrapper around Arch Linux's Pacman package manager and
  the AUR.
homepage:            https://github.com/1nsanity/pacrat
bug-reports:         https://github.com/1nsanity/pacrat/issues
license:             GPL-3
license-file:        LICENSE
author:              Severen Redwood <severen.redwood@gmail.com>
maintainer:          Severen Redwood <severen.redwood@gmail.com>
copyright:           Copyright (c) 2015 Severen Redwood
category:            System
build-type:          Simple
extra-source-files:
  README.md
  INSTALL.md
  CHANGELOG.md
cabal-version:       >=1.10

executable pacrat
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  ghc-options:         -Wall -O3 -threaded
  build-depends:
    base >=4.7 && < 4.8, cmdargs >= 0.10.12, process >= 1.0.1.3,
    text >= 1.2.0.0, vty-ui >=1.8
  hs-source-dirs:      src
  default-language:    Haskell2010
